Fall 2024 semester update

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                       </span>
                     </div>
                     <p>
-                      I am currently a first-year Master's student at <a href=https://www.khoury.northeastern.edu/programs/artificial-intelligence-ms/"> Northeastern University</a> studying Artificial Intelligence. 
+                      I am currently a first-year Master's student at <a href="https://www.khoury.northeastern.edu/programs/artificial-intelligence-ms/"> Northeastern University</a> studying Artificial Intelligence. 
                       I recently graduated from the <a href="https://www.cse.uconn.edu/">University of Connecticut</a> in May 2024. I am passionate
                       about machine learning and computer vision. Through my internships, coursework, and personal
                       projects, I have developed cross-disciplinary skills in computer science, electrical engineering,
@@ -72,11 +72,11 @@
                     <p style="text-align: center">
                       <a href="mailto:krucinski.j@northeastern.edu">Email</a>
                       &nbsp/&nbsp
-                      <a href="https://drive.google.com/file/d/18T6lgwdu_2P4msQ4hTjwXIlTRNuC1q84/view?usp=sharing">Latest CV</a>
+                      <a href="https://drive.google.com/file/d/1n0Ih6mcPGN6xU6CcUH2enNiVmcR44wty/view?usp=sharing">Latest CV</a>
                       &nbsp/&nbsp
                       <a href="https://www.linkedin.com/in/jkrucinski/">LinkedIn</a>
                       &nbsp/&nbsp
-                      <a href="https://scholar.google.com/citations?user=nqOWfJ0AAAAJ&hl=en">Google Scholar</a>
+                      <a href="https://scholar.google.com/citations?user=nKbVdsgAAAAJ&hl=en">Google Scholar</a>
                       &nbsp/&nbsp
                       <a href="https://github.com/savage-hacker14">GitHub</a>
                       &nbsp/&nbsp
@@ -171,8 +171,8 @@
                       I explored key models such as <a href="https://github.com/microsoft/BioGPT">BioGPT</a>
                       and <a href="https://github.com/allenai/scibert">SciBERT</a> for relation extraction in biomedical literature using annotated corpora including 
                       <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4860626/">BC5CDR</a>, 
-                      <a href="https://biocreative.bioinformatics.udel.edu/news/corpora/chemprot-corpus-biocreative-vi/">ChemProt</a>, 
-                      and <a href="https://biocreative.bioinformatics.udel.edu/tasks/biocreative-vii/track-1/">DrugProt</a>.
+                      <a href="https://huggingface.co/datasets/zapsdcn/chemprot">ChemProt</a>, 
+                      and <a href="https://huggingface.co/datasets/bigbio/drugprot">DrugProt</a>.
                       Specifically, I used a combined
                       ChemProt and DrugProt corpus for SciBERT fine-tuning 
                       and improved precision, recall, and F1 score by 5%.
@@ -286,7 +286,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px 20px 20px 20px;width:75%;vertical-align:middle">
-              <a href="https://se.mathworks.com/company/jobs/students/edg.html"> Systems Modeling Consultant</a>, <b>Qualtech Systems Inc.</b>, Rocky Hill, CT
+              <a href="https://www.teamqsi.com/about-us/"> Systems Modeling Consultant</a>, <b>Qualtech Systems Inc.</b>, Rocky Hill, CT
               <br>
               <i>Jan. 2024, Sep. 2024 to Present</i>
               <br>
@@ -320,7 +320,7 @@
               <br>
               <i>Aug. to Dec. 2022</i>
               <br>
-              Assistant for <a href="https://catalog.uconn.edu/directory-of-courses/course/CSE/2301/">CSE 2301</a> - Digital Logic Design. This course covered the fundamentals of Boolean Algebra and Transistor-Transistor Logic where students applied their skills in weekly labs. I assisted with labs, grading exams/reports, and hosted office hours.
+              Assistant for <a href="https://catalog.uconn.edu/course-search/?details&code=CSE%202301">CSE 2301</a> - Digital Logic Design. This course covered the fundamentals of Boolean Algebra and Transistor-Transistor Logic where students applied their skills in weekly labs. I assisted with labs, grading exams/reports, and hosted office hours.
             </td>
             <td style="padding:0px 0px 0px 0px;width:10%;vertical-align:middle"><img src="images/uconn_soe_logo.png" width="75" height="75"></td>
           </tr>
@@ -333,7 +333,7 @@
               <br>
               <i>Jun. to Aug. 2022</i>
               <br>
-              Deployed an SVM model on the <a href="https://www.medtronic.com/covidien/en-us/products/surgical-stapling/signia-stapling-system.html">Signia surgical stapler</a> for staple quality assessment based on sensor measurements. Also, I trained a CNN model for visual staple quality 
+              Deployed an SVM model on the <a href="https://www.medtronic.com/en-us/healthcare-professionals/specialties/surgical-solutions/signia-stapling-system.html">Signia surgical stapler</a> for staple quality assessment based on sensor measurements. Also, I trained a CNN model for visual staple quality 
               assessment.
               </br>
             </td>
@@ -377,6 +377,33 @@
           margin-left: auto;
         "
       >
+          <!-- project: Northeastern Hand Gesture Recognition Project -->
+          <tr>
+            <td style="padding: 20px; width: 35%; vertical-align: middle">
+              <img src="images/example_zoom_in.gif" width="300" align="bottom" onclick="openOverlay(this.src)" />
+            </td>
+            <td style="padding: 20px; width: 65%; vertical-align: middle">
+              <a href="https://github.com/savage-hacker14/gesture-computer-control">
+                <!-- Change this link to the UConn CSE Team 11 team page -->
+                <papertitle>Dynamic Hand Gesture Recognition</papertitle>
+              </a>
+              <br /> <strong>Jacob Krucinski</strong>, Maalolan B, Yiting W, Hau H, and Andrew P
+              <br />
+              <em>
+                Northeastern University: CS 5100 Final Project
+              </em> 
+              <br />
+              <!-- <a href="">project page</a> / -->
+              <a href="https://docs.google.com/presentation/d/1uRziCbcJQd6zKqW0X7h91gXNPQYzkSj_/edit?usp=sharing&ouid=100363518490014094553&rtpof=true&sd=true">Presentation</a> /
+              <a href="https://drive.google.com/file/d/1NrG6VjSg3LKgrS6uQa0goweEtylO8uTd/view?usp=sharing">Report</a>
+              <p>
+                This project entailed developing a dynamic hand gesture recognition system from a webcam feed for computer control. The goal was to enable intuitive interactions without
+                the use of keyboard and mouse that mimic common touchscreen/tablet gestures. Our system recognizes scrolling up/down, zooming in/out, and switching applications
+                left/right. For this project, we developed all stages of the ML workflow, including data collection, model training/validation, and deployment interface.
+                It can be reused for support of new gestures and computer controls.
+              </p>
+            </td>
+          </tr>
 
           <!-- project: UConn Senior Design Project -->
           <tr>
@@ -428,7 +455,7 @@
               </em> 
               <br />
               <a href="https://drive.google.com/file/d/1oCWxxRtDVnTDjOW6t6yOOWu4PWqpO6sK/view?usp=sharing">Presentation</a> /
-              <a href="https://drive.google.com/drive/folders/1KVbd7Kygzsbu1W8f5--19TAXmzcmWOOi?usp=sharing">Demo Videos</a>
+              <a href="https://drive.google.com/drive/folders/1-6r2LnrP2v7ZYxyqbUrrHMPz2KY6PNbc?usp=sharing">Demo Videos</a>
               <p>
                 The goal of this project was to build a fixed-base two DOF articulated manipulator that would play Cup Pong.
                 The manipulator was built with 2x Dynamixel MX64-AR motors and supporting mounting hardware, as well as a 
@@ -454,7 +481,7 @@
                     <br>
                     <br>
                     </p><div style="float:left;">
-                        Updated October 28th, 2024
+                        Updated December 16th, 2024
                     </div>
                     <div style="float:right;">
                         Thanks <a href="https://jonbarron.info">Jon Barron</a> for this amazing template
